Trial/aks/traefik/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myingressroute
  namespace: cmpp

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`foo.chinaeast2.cloudapp.chinacloudapi.cn`) && PathPrefix(`/bar`)
    kind: Rule
    services:
    - name: whoami
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroute.tcp
  namespace: cmpp

spec:
  entryPoints:
    - tcpep
  routes:
  - match: HostSNI(`*`)
    kind: Rule
    services:
      - name: whoamitcp
        port: 8080
